maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:21: error: 'while' expected but '}' found.
} 
^